file movements and nav adjustments

--- a/index.html
+++ b/index.html
@@ -12,12 +12,12 @@
         
             <li><a href="#">Home</a></li>
             <li><a href="#" class="active">N-Queens</a></li>
-            <li><a href="k.html">Knight's Tour Visualization</a></li>
-            <li><a href="tree.html" class="active">Binary Tree Search</a></li>
-            <li><a href="maze-solver.html">Maze Solver</a></li>
-            <li><a href="graph-coloring.html">Graph Coloring</a></li>
-            <li><a href="subset-sum.html">Subset Sum</a></li>
-            <li><a href="h.html">Hamiltonian Cycle</a></li>
+            <li><a href="others/k.html">Knight's Tour Visualization</a></li>
+            <li><a href="others/tree.html" class="active">Binary Tree Search</a></li>
+            <li><a href="#">Maze Solver</a></li>
+            <li><a href="#">Graph Coloring</a></li>
+            <li><a href="#">Subset Sum</a></li>
+            <li><a href="others/h.html">Hamiltonian Cycle</a></li>
         </ul>
     </nav>
     
