--- a/others/k.html
+++ b/others/k.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+    
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Knight's Tour Visualization</title>
@@ -156,6 +157,7 @@ h1 {
         }
 
         #chessboard {
+            margin-top: 50px;
             display: grid;
             gap: 1px;
             background-color: var(--board-bg);
@@ -277,9 +279,17 @@ h1 {
 <nav class="navbar">
     <div class="navbar-logo">♞</div>
     <ul class="navbar-links">
-        <li><a href="#" class="active">Knight's Tour</a></li>
-        <li><a href="#">How to Play</a></li>
-        <li><a href="#">About</a></li>
+
+            
+                <li><a href="#">Home</a></li>
+                <li><a href="\index.html">N-Queens</a></li>
+                <li><a href="others/k.html"  class="active">Knight's Tour Visualization</a></li>
+                <li><a href="tree.html">Binary Tree Search</a></li>
+                <li><a href="#">Maze Solver</a></li>
+                <li><a href="#">Graph Coloring</a></li>
+                <li><a href="#">Subset Sum</a></li>
+                <li><a href="h.html">Hamiltonian Cycle</a></li>
+ 
     </ul>
     <button class="navbar-toggle" id="navbar-toggle">
         <span></span>
