--- a/others/tree.html
+++ b/others/tree.html
@@ -10,7 +10,7 @@
     <nav>
         <ul>
             <li><a href="#">Home</a></li>
-            <li><a href="index.html">N-Queens</a></li>
+            <li><a href="\index.html">N-Queens</a></li>
             <li><a href="k.html">Knight's Tour Visualization</a></li>
             <li><a href="#" class="active">Binary Tree Search</a></li>
             <li><a href="maze-solver.html">Maze Solver</a></li>
