--- a/others/s.html
+++ b/others/s.html
@@ -5,50 +5,105 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Interactive Sum of Subsets Visualization</title>
     <style>
+        :root {
+            --primary-color: #3498db;
+            --secondary-color: #2980b9;
+            --background-color: #ecf0f1;
+            --text-color: #34495e;
+            --success-color: #2ecc71;
+            --border-radius: 8px;
+        }
+
         body {
-            font-family: Arial, sans-serif;
+            font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
             max-width: 800px;
             margin: 0 auto;
             padding: 20px;
+            background-color: var(--background-color);
+            color: var(--text-color);
         }
+
         h1 {
             text-align: center;
+            color: var(--primary-color);
         }
+
         #input-container {
             display: flex;
             flex-direction: column;
-            gap: 10px;
+            gap: 15px;
             margin-bottom: 20px;
+            background-color: white;
+            padding: 20px;
+            border-radius: var(--border-radius);
+            box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);
         }
+
         input, button, select {
-            padding: 5px;
+            padding: 10px;
             font-size: 16px;
+            border: 1px solid #bdc3c7;
+            border-radius: var(--border-radius);
+            transition: all 0.3s ease;
         }
+
+        input:focus, select:focus {
+            outline: none;
+            border-color: var(--primary-color);
+            box-shadow: 0 0 0 2px rgba(52, 152, 219, 0.2);
+        }
+
+        button {
+            background-color: var(--primary-color);
+            color: white;
+            border: none;
+            cursor: pointer;
+        }
+
+        button:hover {
+            background-color: var(--secondary-color);
+        }
+
         #visualization-container {
             display: flex;
             flex-wrap: wrap;
             gap: 10px;
+            margin-top: 20px;
         }
+
         .subset {
-            border: 1px solid #ccc;
+            border: 1px solid #bdc3c7;
             padding: 10px;
-            border-radius: 5px;
-            background-color: #f0f0f0;
+            border-radius: var(--border-radius);
+            background-color: white;
+            transition: all 0.3s ease;
         }
+
         .subset.solution {
-            background-color: #90EE90;
+            background-color: var(--success-color);
+            color: white;
         }
+
         #progress-bar {
             width: 100%;
-            height: 20px;
-            background-color: #f0f0f0;
-            margin-bottom: 10px;
+            height: 10px;
+            background-color: #e0e0e0;
+            border-radius: var(--border-radius);
+            overflow: hidden;
+            margin-bottom: 20px;
         }
+
         #progress {
             width: 0;
             height: 100%;
-            background-color: #4CAF50;
+            background-color: var(--primary-color);
             transition: width 0.3s;
+        }
+
+        .checkbox-container {
+            display: flex;
+            align-items: center;
+            gap: 5px;
         }
     </style>
 </head>
@@ -65,9 +120,10 @@
             <option value="asc">Ascending</option>
             <option value="desc">Descending</option>
         </select>
-        <label for="show-solutions">
-            <input type="checkbox" id="show-solutions"> Show only solutions
-        </label>
+        <div class="checkbox-container">
+            <input type="checkbox" id="show-solutions">
+            <label for="show-solutions">Show only solutions</label>
+        </div>
     </div>
     <div id="progress-bar"><div id="progress"></div></div>
     <div id="visualization-container"></div>
