--- a/others/r.html
+++ b/others/r.html
@@ -3,91 +3,139 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Rat in a Maze</title>
+    <title>Rat in a Maze - Backtracking</title>
     <style>
+        body {
+            font-family: Arial, sans-serif;
+            display: flex;
+            flex-direction: column;
+            align-items: center;
+            background-color: #f0f0f0;
+        }
+        #maze-container {
+            background-color: white;
+            padding: 20px;
+            border-radius: 10px;
+            box-shadow: 0 0 10px rgba(0,0,0,0.1);
+        }
         #maze {
             display: grid;
-            grid-template-columns: repeat(5, 50px);
+            grid-template-columns: repeat(4, 50px);
             grid-gap: 1px;
             background-color: #000;
             padding: 1px;
-            width: 252px;
+            width: 202px;
         }
         .cell {
             width: 50px;
             height: 50px;
-            background-color: #fff;
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            font-weight: bold;
+            transition: background-color 0.3s;
         }
-        .wall {
-            background-color: #000;
-        }
-        #rat {
-            width: 40px;
-            height: 40px;
-            background-color: #f99;
-            border-radius: 50%;
-            position: absolute;
-            transition: all 0.3s;
+        .wall { background-color: #2c3e50; }
+        .path { background-color: #27ae60; }
+        .visited { background-color: #e74c3c; }
+        .start { background-color: #3498db; }
+        .end { background-color: #f1c40f; }
+        button {
+            margin-top: 20px;
+            padding: 10px 20px;
+            font-size: 16px;
+            cursor: pointer;
         }
     </style>
 </head>
 <body>
-    <h1>Rat in a Maze</h1>
-    <p>Use arrow keys to move the rat.</p>
-    <div id="maze"></div>
-    <div id="rat"></div>
+    <div id="maze-container">
+        <h1>Rat in a Maze - Backtracking</h1>
+        <div id="maze"></div>
+        <button onclick="solveMaze()">Solve Maze</button>
+    </div>
 
     <script>
         const maze = [
-            [0, 0, 1, 0, 0],
-            [1, 0, 0, 0, 1],
-            [0, 1, 1, 0, 0],
-            [0, 0, 0, 1, 0],
-            [1, 1, 0, 0, 0]
+            [1, 0, 0, 0],
+            [1, 1, 0, 1],
+            [0, 1, 0, 0],
+            [1, 1, 1, 1]
         ];
-
+        const n = maze.length;
+        const solution = Array(n).fill().map(() => Array(n).fill(0));
         const mazeElement = document.getElementById('maze');
-        const rat = document.getElementById('rat');
-        let ratX = 0, ratY = 0;
+        let delay = 0;
 
-        function createMaze() {
-            for (let y = 0; y < 5; y++) {
-                for (let x = 0; x < 5; x++) {
+        function createMazeUI() {
+            for (let i = 0; i < n; i++) {
+                for (let j = 0; j < n; j++) {
                     const cell = document.createElement('div');
-                    cell.className = maze[y][x] ? 'cell wall' : 'cell';
+                    cell.className = maze[i][j] ? 'cell' : 'cell wall';
+                    cell.id = `cell-${i}-${j}`;
                     mazeElement.appendChild(cell);
                 }
             }
+            document.getElementById('cell-0-0').classList.add('start');
+            document.getElementById(`cell-${n-1}-${n-1}`).classList.add('end');
         }
 
-        function moveRat() {
-            rat.style.left = `${ratX * 50 + 5}px`;
-            rat.style.top = `${ratY * 50 + 5}px`;
+        function updateCell(x, y, className) {
+            setTimeout(() => {
+                const cell = document.getElementById(`cell-${x}-${y}`);
+                cell.className = `cell ${className}`;
+                if (className === 'path') {
+                    cell.textContent = '🐀';
+                } else {
+                    cell.textContent = '';
+                }
+            }, delay);
+            delay += 100;
         }
 
-        function checkCollision(x, y) {
-            return x >= 0 && x < 5 && y >= 0 && y < 5 && maze[y][x] === 0;
+        function isSafe(x, y) {
+            return x >= 0 && x < n && y >= 0 && y < n && maze[x][y] === 1;
         }
 
-        document.addEventListener('keydown', (e) => {
-            let newX = ratX, newY = ratY;
-
-            switch (e.key) {
-                case 'ArrowUp': newY--; break;
-                case 'ArrowDown': newY++; break;
-                case 'ArrowLeft': newX--; break;
-                case 'ArrowRight': newX++; break;
+        function solveMazeUtil(x, y) {
+            if (x === n - 1 && y === n - 1) {
+                solution[x][y] = 1;
+                updateCell(x, y, 'path');
+                return true;
             }
 
-            if (checkCollision(newX, newY)) {
-                ratX = newX;
-                ratY = newY;
-                moveRat();
-            }
-        });
+            if (isSafe(x, y)) {
+                solution[x][y] = 1;
+                updateCell(x, y, 'path');
 
-        createMaze();
-        moveRat();
+                if (solveMazeUtil(x + 1, y)) return true;
+                if (solveMazeUtil(x, y + 1)) return true;
+
+                solution[x][y] = 0;
+                updateCell(x, y, 'visited');
+                return false;
+            }
+
+            return false;
+        }
+
+        function solveMaze() {
+            delay = 0;
+            for (let i = 0; i < n; i++) {
+                for (let j = 0; j < n; j++) {
+                    if (maze[i][j] === 1) {
+                        updateCell(i, j, '');
+                    }
+                }
+            }
+            if (solveMazeUtil(0, 0)) {
+                console.log("Solution found");
+            } else {
+                console.log("No solution exists");
+            }
+        }
+
+        createMazeUI();
     </script>
 </body>
 </html>
