--- a/others/r.html
+++ b/others/r.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Rat in a Maze - Backtracking</title>
+    <title>Advanced Rat in a Maze - Backtracking</title>
     <style>
         body {
             font-family: Arial, sans-serif;
@@ -17,18 +17,18 @@
             padding: 20px;
             border-radius: 10px;
             box-shadow: 0 0 10px rgba(0,0,0,0.1);
+            max-width: 800px;
+            width: 100%;
         }
         #maze {
             display: grid;
-            grid-template-columns: repeat(4, 50px);
-            grid-gap: 1px;
+            gap: 1px;
             background-color: #000;
             padding: 1px;
-            width: 202px;
+            margin: 20px auto;
         }
         .cell {
-            width: 50px;
-            height: 50px;
+            aspect-ratio: 1;
             display: flex;
             justify-content: center;
             align-items: center;
@@ -40,34 +40,66 @@
         .visited { background-color: #e74c3c; }
         .start { background-color: #3498db; }
         .end { background-color: #f1c40f; }
-        button {
-            margin-top: 20px;
-            padding: 10px 20px;
+        button, select, input {
+            margin: 10px;
+            padding: 5px 10px;
             font-size: 16px;
-            cursor: pointer;
+        }
+        #controls {
+            display: flex;
+            flex-wrap: wrap;
+            justify-content: center;
+            align-items: center;
         }
     </style>
 </head>
 <body>
     <div id="maze-container">
-        <h1>Rat in a Maze - Backtracking</h1>
+        <h1>Advanced Rat in a Maze - Backtracking</h1>
+        <div id="controls">
+            <label>
+                Size:
+                <select id="mazeSize">
+                    <option value="4">4x4</option>
+                    <option value="6">6x6</option>
+                    <option value="8">8x8</option>
+                    <option value="10">10x10</option>
+                </select>
+            </label>
+            <label>
+                Complexity:
+                <select id="mazeComplexity">
+                    <option value="easy">Easy</option>
+                    <option value="medium">Medium</option>
+                    <option value="hard">Hard</option>
+                </select>
+            </label>
+            <label>
+                Number of Rats:
+                <input type="number" id="ratCount" min="1" max="5" value="1">
+            </label>
+            <button onclick="generateMaze()">Generate Maze</button>
+            <button onclick="solveMaze()">Solve Maze</button>
+        </div>
         <div id="maze"></div>
-        <button onclick="solveMaze()">Solve Maze</button>
+        <div id="stats"></div>
     </div>
 
     <script>
-        const maze = [
-            [1, 0, 0, 0],
-            [1, 1, 0, 1],
-            [0, 1, 0, 0],
-            [1, 1, 1, 1]
-        ];
-        const n = maze.length;
-        const solution = Array(n).fill().map(() => Array(n).fill(0));
-        const mazeElement = document.getElementById('maze');
+        let maze = [];
+        let n = 4;
+        let solution = [];
+        let mazeElement = document.getElementById('maze');
+        let statsElement = document.getElementById('stats');
         let delay = 0;
+        let ratCount = 1;
+        let solvedPaths = 0;
 
         function createMazeUI() {
+            mazeElement.innerHTML = '';
+            mazeElement.style.gridTemplateColumns = `repeat(${n}, 1fr)`;
+            mazeElement.style.width = `${Math.min(400, n * 40)}px`;
+
             for (let i = 0; i < n; i++) {
                 for (let j = 0; j < n; j++) {
                     const cell = document.createElement('div');
@@ -80,36 +112,37 @@
             document.getElementById(`cell-${n-1}-${n-1}`).classList.add('end');
         }
 
-        function updateCell(x, y, className) {
+        function updateCell(x, y, className, ratIndex = 0) {
             setTimeout(() => {
                 const cell = document.getElementById(`cell-${x}-${y}`);
                 cell.className = `cell ${className}`;
                 if (className === 'path') {
-                    cell.textContent = '🐀';
+                    cell.textContent = '🐀' + (ratIndex + 1);
                 } else {
                     cell.textContent = '';
                 }
             }, delay);
-            delay += 100;
+            delay += 50;
         }
 
         function isSafe(x, y) {
             return x >= 0 && x < n && y >= 0 && y < n && maze[x][y] === 1;
         }
 
-        function solveMazeUtil(x, y) {
+        function solveMazeUtil(x, y, ratIndex) {
             if (x === n - 1 && y === n - 1) {
                 solution[x][y] = 1;
-                updateCell(x, y, 'path');
+                updateCell(x, y, 'path', ratIndex);
+                solvedPaths++;
                 return true;
             }
 
             if (isSafe(x, y)) {
                 solution[x][y] = 1;
-                updateCell(x, y, 'path');
+                updateCell(x, y, 'path', ratIndex);
 
-                if (solveMazeUtil(x + 1, y)) return true;
-                if (solveMazeUtil(x, y + 1)) return true;
+                if (solveMazeUtil(x + 1, y, ratIndex)) return true;
+                if (solveMazeUtil(x, y + 1, ratIndex)) return true;
 
                 solution[x][y] = 0;
                 updateCell(x, y, 'visited');
@@ -121,6 +154,9 @@
 
         function solveMaze() {
             delay = 0;
+            solvedPaths = 0;
+            solution = Array(n).fill().map(() => Array(n).fill(0));
+            
             for (let i = 0; i < n; i++) {
                 for (let j = 0; j < n; j++) {
                     if (maze[i][j] === 1) {
@@ -128,14 +164,51 @@
                     }
                 }
             }
-            if (solveMazeUtil(0, 0)) {
-                console.log("Solution found");
-            } else {
-                console.log("No solution exists");
+
+            for (let i = 0; i < ratCount; i++) {
+                if (solveMazeUtil(0, 0, i)) {
+                    console.log(`Rat ${i + 1} found a solution`);
+                } else {
+                    console.log(`Rat ${i + 1} couldn't find a solution`);
+                }
             }
+
+            setTimeout(() => {
+                statsElement.textContent = `Paths found: ${solvedPaths} out of ${ratCount} rats`;
+            }, delay);
         }
 
-        createMazeUI();
+        function generateMaze() {
+            n = parseInt(document.getElementById('mazeSize').value);
+            const complexity = document.getElementById('mazeComplexity').value;
+            ratCount = parseInt(document.getElementById('ratCount').value);
+
+            let wallProbability;
+            switch (complexity) {
+                case 'easy': wallProbability = 0.2; break;
+                case 'medium': wallProbability = 0.3; break;
+                case 'hard': wallProbability = 0.4; break;
+            }
+
+            maze = Array(n).fill().map(() => Array(n).fill(0));
+            
+            for (let i = 0; i < n; i++) {
+                for (let j = 0; j < n; j++) {
+                    if (Math.random() > wallProbability) {
+                        maze[i][j] = 1;
+                    }
+                }
+            }
+
+            // Ensure start and end are open
+            maze[0][0] = 1;
+            maze[n-1][n-1] = 1;
+
+            createMazeUI();
+            statsElement.textContent = '';
+        }
+
+        generateMaze();
     </script>
 </body>
 </html>
